--- a/src/westend_map/frontend/templates/legend_filters.html
+++ b/src/westend_map/frontend/templates/legend_filters.html
@@ -250,10 +250,10 @@
     <div class="filter-section">
       <h4>Visualization</h4>
       <div class="filter-visual">
-        <label><input type="checkbox" id="viz-color-vtu" checked> Color-scale VTU buildings</label>
+        <label><input type="checkbox" id="viz-color-vtu" checked> Color-scale VTU buildings (total units)</label>
         <label><input type="checkbox" id="viz-hide-non"> Hide buildings w/o members</label>
         <label><input type="checkbox" id="viz-show-blocks" checked> Show block outlines</label>
-        <label><input type="checkbox" id="viz-color-blocks" checked> Color-scale blocks</label>
+        <label><input type="checkbox" id="viz-color-blocks" checked> Color-scale blocks (total units)</label>
       </div>
     </div>
     <div class="filter-section">
