--- a/src/westend_map/frontend/templates/sidebar.html
+++ b/src/westend_map/frontend/templates/sidebar.html
@@ -30,9 +30,9 @@
 
   #sidebar-container {
     order: 0;
-    width: ${sidebar_width}px;
+    width: 760px;
     min-width: 280px;
-    max-width: 760px;
+    max-width: 900px;
     height: 100%;
     background: #fff;
     border-right: 1px solid #d7dbe5;
